testsuite/tests/typecheck/should_fail/T22924b.stderr

T22924b.hs:10:5: error:
    • Reduction stack overflow; size = 201
      When simplifying the following type: S
      Use -freduction-depth=0 to disable this check
      (any upper bound you could choose might fail unpredictably with
       minor updates to GHC, so disabling the check is recommended if
       you're sure that type checking should terminate)
    • In the expression: coerce
      In an equation for ‘f’: f = coerce
